yamls/traefik/project/octack/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: octack-stripprefix-midd
  namespace: logging
spec:
  stripPrefix:
    prefixes: 
    - /octack
    forceSlash: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: octack-ipwhitelist-midd
  namespace: logging
spec:
  ipWhiteList:
    sourceRange:
      - 192.168.1.178
