yamls/traefik/project/octack/ing-http.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-http-octack
  namespace: logging
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`192.168.1.98`) && PathPrefix(`/octack`)
    kind: Rule
    middlewares:
    - name: octack-stripprefix-midd
    - name: octack-ipwhitelist-midd
    services:
    - name: ck-svc
      port: 8123
      kind: Service
      namespace: logging
